k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: giggle-api-svc
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: giggle-api
